# ml

./: .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  README.md  autoenc.cpp  minst.cpp  read_minst.cpp  read_minst.h
cmake/: FindEigen3.cmake
meta/: for.h  logic.h  meta.h  params.h  tuple.h
ml/: ann.h  bit_vec.h  composite_classification.h  dag_muticlass.h  dot.h  exception.h  kernels.h  max_wins.h  sign.h
ml/ann/: activations.h  connection.h  feed_forward.h  guts.h  layer_types.h  optimization.h  params.h  regularization.h  stop_criterion.h
ml/dataset/: dataset.h  dataset_traits.h
ml/svm/: smo.h  svc.h
test/: CMakeLists.txt
test/meta/: tuple.cpp
test/ml/ann/: connection.cpp  feed_forward.cpp
